[gd_scene load_steps=16 format=3 uid="uid://d0h6o0scrjdcv"]

[ext_resource type="Script" uid="uid://b35cre6rngtif" path="res://Scripts/Game.gd" id="1_r150o"]
[ext_resource type="Script" uid="uid://b4ftjc0rm3rvu" path="res://Scripts/TextInput.gd" id="2_idj7w"]
[ext_resource type="Script" uid="uid://6mxfgqeh5g21" path="res://Scripts/TargetSentence.gd" id="2_kln2b"]
[ext_resource type="Resource" uid="uid://da3fuvq6emmv2" path="res://Content/Topics/Easy/Sentence_Hello.tres" id="2_rgh2o"]
[ext_resource type="Texture2D" uid="uid://lcjc6vgfx3km" path="res://Art/IncorrectIcon.png" id="5_pbw6q"]
[ext_resource type="Script" uid="uid://dc5g1pst2xkj3" path="res://Scripts/StatusSymbol.gd" id="6_v1gob"]
[ext_resource type="AudioStream" uid="uid://bwsy6ig6nyv7n" path="res://Audio/chips-stack-1.ogg" id="7_50glp"]
[ext_resource type="AudioStream" uid="uid://fd6nejgrbjes" path="res://Audio/chips-stack-2.ogg" id="8_vy5pj"]
[ext_resource type="PackedScene" uid="uid://vkci5daj3uyn" path="res://Prefabs/LanguagePopup.tscn" id="9_vy5pj"]
[ext_resource type="PackedScene" uid="uid://t1hi81lqi50s" path="res://Prefabs/TopicSelection.tscn" id="10_bmxlf"]
[ext_resource type="PackedScene" uid="uid://ba4p4wb67v05u" path="res://Prefabs/ResultsScreen.tscn" id="11_4kpch"]
[ext_resource type="PackedScene" uid="uid://ns5w07dr7x6n" path="res://Prefabs/CategoryInfo.tscn" id="12_grg3l"]
[ext_resource type="PackedScene" uid="uid://omcc73783bv6" path="res://Prefabs/OptionsMenu.tscn" id="13_frkhe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50glp"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vy5pj"]
bg_color = Color(0, 0.728248, 0.0423615, 1)

[node name="Game" type="Node2D" node_paths=PackedStringArray("TargetText", "PlayerText", "TranslatedText", "AnswerSymbol") groups=["Game"]]
script = ExtResource("1_r150o")
Sentence = ExtResource("2_rgh2o")
TargetText = NodePath("Panel/TargetSentence")
PlayerText = NodePath("Panel/TextEdit")
TranslatedText = NodePath("Panel/TranslatedSentence")
AnswerSymbol = NodePath("Panel/Status")
metadata/_edit_horizontal_guides_ = [-180.0]

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="TargetSentence" type="Label" parent="Panel"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -828.0
offset_top = -155.0
offset_right = -228.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "你好"
script = ExtResource("2_kln2b")

[node name="TranslatedSentence" type="Label" parent="Panel"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -828.0
offset_top = -73.0
offset_right = -228.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "hello"

[node name="Pinyin" type="Label" parent="Panel"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -828.0
offset_top = -232.0
offset_right = -228.0
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "nǐhǎo"

[node name="TextEdit" type="TextEdit" parent="Panel"]
custom_minimum_size = Vector2(1400, 80)
layout_mode = 0
offset_left = 132.0
offset_top = 578.0
offset_right = 1862.0
offset_bottom = 658.0
theme_override_font_sizes/font_size = 40
placeholder_text = "enter in chinese characters here."
emoji_menu_enabled = false
middle_mouse_paste_enabled = false
empty_selection_clipboard_enabled = false
script = ExtResource("2_idj7w")

[node name="Timer" type="Timer" parent="Panel/TextEdit"]
wait_time = 0.2
autostart = true

[node name="Status" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 43.0
offset_top = 383.0
offset_right = 107.0
offset_bottom = 447.0
texture = ExtResource("5_pbw6q")
script = ExtResource("6_v1gob")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 140.0
offset_top = 673.0
offset_right = 485.0
offset_bottom = 715.0
theme_override_font_sizes/font_size = 30
text = "press [enter] to validate"

[node name="GoodSFX" type="AudioStreamPlayer2D" parent="Panel"]
stream = ExtResource("7_50glp")

[node name="BadSFX" type="AudioStreamPlayer2D" parent="Panel"]
stream = ExtResource("8_vy5pj")

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -1036.0
offset_right = 313.0
offset_bottom = -1008.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 20
text = "(F1) REPLAY AUDIO  | (F2) - SKIP"
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -950.0
offset_top = -531.5
offset_right = 950.0
offset_bottom = -504.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_50glp")
theme_override_styles/fill = SubResource("StyleBoxFlat_vy5pj")
value = 10.0
show_percentage = false

[node name="VBoxContainer" parent="Panel" instance=ExtResource("9_vy5pj")]
layout_mode = 0
offset_left = 853.0
offset_top = 965.0
offset_right = 1153.0
offset_bottom = 1023.0

[node name="Selection" parent="." instance=ExtResource("10_bmxlf")]

[node name="ResultsScreen" parent="." instance=ExtResource("11_4kpch")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="CategoryInfo" parent="." instance=ExtResource("12_grg3l")]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0

[node name="OptionsMenu" parent="." instance=ExtResource("13_frkhe")]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0

[connection signal="CompletedTalking" from="Panel/TargetSentence" to="." method="_on_target_sentence_completed_talking"]
[connection signal="OnEnterPressed" from="Panel/TextEdit" to="." method="_on_text_edit_on_enter_pressed"]
[connection signal="text_changed" from="Panel/TextEdit" to="Panel/TextEdit" method="_on_text_changed"]
[connection signal="timeout" from="Panel/TextEdit/Timer" to="Panel/TextEdit" method="_on_timer_timeout"]
[connection signal="ButtonPressed" from="Selection" to="." method="_on_selection_button_pressed"]
[connection signal="OnContinueButtonPressed" from="ResultsScreen" to="." method="_on_results_screen_on_continue_button_pressed"]
